webapp/src/styles/Header.scss
@import 'variables';

header {
  background-color: white;
  width: 100%;
  box-shadow: $drop-shadow;

  .header-content {
    max-width: $content-width;
    margin: 0 auto;
    display: flex;
    justify-content: space-between;
    align-items: stretch;

    img {
      max-height: 4em;
      padding: 1em;
    }

    .buttons-container {
      display: flex;

      & > * {
        align-items: center;
        display: flex;
        padding: 0 1em;
      }

      button {
        border: none;
        border-radius: 0;
        transition: background-color 0.3s ease;

        &:hover {
          background-color: #dddddd;
        }
      }
    }
  }
}

